--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.4",
+    "popper.js": "^1.14.6",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
