--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^6.0.3",
     "adm-zip": "^0.4.11",
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.4",
